# karchive-selfcontains

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/libbz2/: CMakeLists.txt
dependencies/liblzma/: CMakeLists.txt  config.h.in
dependencies/liblzma/liblzma/api/: lzma.h
dependencies/liblzma/liblzma/common/: common.h
dependencies/libz/: CMakeLists.txt  gzread.c  zconf.h.in
dependencies/libzstd/: CMakeLists.txt
src/: CMakeLists.txt  config-compression.h  karchive.cpp  karchive_export.h  loggingcategory.cpp  loggingcategory.h
